@@ -430,6 +430,7 @@
 #define IDS_ERR_NOVALIDPATH             1308
 #define IDS_ERR_FAILEDUNIGNOREPROPERTY  1309
 #define IDS_ERR_NOTHINGTOREVERT         1310
+#define IDS_ERR_NOCOMMONCOPYFROM        1311
 #define IDS_WARN_FOLDERNOTEXIST         1400
 #define IDS_WARN_SHAREFILEACCESS        1401
 #define IDS_WARN_RELOCATEREALLY         1402
